[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Void_EnvironmentPack/Asteroids/Asteroid 01 - Base.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Void_EnvironmentPack/Asteroids/Asteroid 01 - Explode.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Void_EnvironmentPack/Effects/Asteroid - Flame.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Asteroids.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Base",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Explode",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Effect",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 19.105

[sub_resource type="CircleShape2D" id=12]
radius = 19.1

[node name="Asteroids" type="Area2D"]
collision_layer = 33
collision_mask = 7
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Base"

[node name="SpriteEffect" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
rotation = -1.5708
z_index = -1
frames = SubResource( 16 )
animation = "Effect"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 12 )
shape = SubResource( 12 )

[node name="Stats" parent="." instance=ExtResource( 7 )]

[connection signal="body_entered" from="." to="." method="_on_Asteroids_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
